--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 .card-title-font-size {
-  @apply text-base md:text-lg lg:text-xl;
+  @apply text-lg md:text-xl lg:text-2xl;
 }
 
 .price-title-font-size {
